[tool.poetry]
name = "cipher_ry2403"
version = "0.1.0"
description = "python package including a Caesar Cipher function"
authors = ["Renfang Yang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
